--- a/css/style-dark.css
+++ b/css/style-dark.css
@@ -902,7 +902,8 @@ header .header-mobile {
   -o-transition: opacity .4s ease;
   transition: opacity .4s ease;
   -webkit-filter: invert(100%);
-  filter: invert(100%); }
+  filter: invert(100%); 
+}
   .clients .client-logo img:hover {
     opacity: 1; }
 
